# phenotastic

./: .coverage  .cursorrules  .env_template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.eggs/: pytest_runner-4.2-py2.7.egg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  docs.yml  mirror.yaml  publish-testpypi.yml  release.yml
.pytest_cache/v/cache/: lastfailed
.tox/flake8/: .tox-config1  pip-selfcheck.json
.tox/flake8/lib/python2.7/: abc.py  copy_reg.py  encodings  fnmatch.py  genericpath.py  lib-dynload  linecache.py  locale.py  orig-prefix.txt  os.py  posixpath.py  re.py  sre_constants.py  sre_parse.py  stat.py  warnings.py
.tox/py27/: .tox-config1  pip-selfcheck.json
.tox/py27/include/: python2.7
.tox/py27/lib/python2.7/: UserDict.py  _abcoll.py  _weakrefset.py  codecs.py  config  ntpath.py  sre.py  sre_compile.py  types.py
.tox/py36/: .tox-config1  pip-selfcheck.json
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  operations.rst  phenotastic.external.rst  phenotastic.rst  pipeline.rst  quickstart.rst  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  phenotastic.doctree  phenotastic.external.clahe.doctree  phenotastic.external.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  phenotastic.external.clahe.html  phenotastic.external.html  phenotastic.html  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/phenotastic/: Meristem_Phenotyper_3D.html  domain_processing.html  domains.html  file_processing.html  mesh.html  mesh_processing.html  misc.html  plot.html
docs/_build/html/_sources/: phenotastic.external.clahe.rst.txt  phenotastic.rst.txt
docs/api/: domains.rst  exceptions.rst  index.rst  mesh.rst  phenomesh.rst  pipeline.rst
examples/pipelines/: custom_smoothing.yaml  default.yaml  full_workflow.yaml  standard.yaml
phenotastic/: Meristem_Phenotyper_3D.py  __init__.py  domain_processing.py  domains.py  file_processing.py  files.py  mesh.py  mesh_movie.py  mesh_processing.py  mesh_processing.py.patch  misc.py  plot.py  surface.py  test.init  test.neigh
phenotastic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phenotastic/analysis/: areaForBenoit.py  bhatia_convert_to_tiff.py  bhatia_segmentation.py  compareCurvatures.py  compare_WUS_total_epidermal_intensity.py  explore_segmentation.py  fibonacci.py  filipa.py  for_something.py  generate_meshes_for_henrik.py  image_registration.py  image_similarity_measures.py  internal_external_comparison.py  l1_quant_new.py  max_projection_segmentation.py  meristemFeatureExtraction.py  parab_clv_compare.py  paraboloid_fits_for_henrik.py  realistic_organism_template.py  remove_scrap.py  resolution_meshing_comparison.py  rigid_registration_2d.py  ross_hypo.py  scrapRemoval.py  segment_domains.py  shift_parameters.py  signal_surface_projection.py  tongue_mesh.ply  untitled0.py  untitled2.py  yi_curvature.py
phenotastic/analysis/optimisation/: .generate_templates.py.swp  generate_meshes_for_mgx.py  generate_templates.py  optimise_coarse.py
phenotastic/analysis/yi/: yi.py  yi_batch.py  yi_other.py
phenotastic/graveyard/: code_graveyard.py
phenotastic/gui/: batch_processor.py  batch_processor_gui.ui
phenotastic/old/: README.rst
phenotastic/old/tests/: maxtest.py  singleOptimisationRunTest.py
phenotastic/test_data/: meristem_test.tif
phenotastic/test_data/meristem_test/: mesh.vtp  results.csv
phenotastic/test_data/meristem_test/features/: feature0.vtp
scripts/: check_missing_init.py
src/phenotastic/: __init__.py  cli.py  domains.py  exceptions.py  mesh.py  misc.py  operations.py  phenomesh.py  pipeline.py  pipeline_decorator.py  presets.py
src/phenotastic/utils/: __init__.py  helpers.py  project.py
tests/: conftest.py  test_integration.py  test_operations.py  test_phenomesh.py  test_phenotastic.py  test_pipeline.py  test_pipeline_config.py  test_presets.py
